--- a/src/Pages/Work/work.css
+++ b/src/Pages/Work/work.css
@@ -5,7 +5,11 @@
 	text-decoration: none;
 	font-size: 26px;
 	color: #fff;
-	border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -khtml-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  transform: translateZ(0);
 	outline: 2px solid #fff;
 	transition-property: outline-offset, outline-color, background-color;
 	transition-duration: 0.25s;
